fixed spacing issue near footer

--- a/css/main.css
+++ b/css/main.css
@@ -54,7 +54,7 @@ ul {
 .sidebar
 {
 background-color: grey;
-height: 515px;
+height: 525px;
 width: 200px;
 }
 .content img
